[package]
name = "network-custom-rpc-runtime-api"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC runtime API for transaction payment FRAME pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", features = ["derive"], default-features = false }

# Local
pallet-network = { version = "4.0.0-dev", path = "../../network", default-features = false }

[features]
default = ["std"]
std = [ 
  "codec/std", 
  "sp-api/std"
]